@startuml
'https://plantuml.com/class-diagram
left to right direction
Clients "1" *-- "many" Client
Client "1" *-- "many" Cat

class Clients {

    -vector<Client*> clients

    +addClient(Client): void
    +findClient(Client*): Client*
    +getClient(int phoneNum): Client*
}

class Client{
    -int phone
    -string name
    -vector<Cat*> cats

    +findCat(Cat*): Cat*
    +getname()
    +getPhoneNumber()
    getCat(string name): Cat*

}


class Cat{
    -string name
    -string breed
    -string colour
    -string marking
    -int birthYear

    +getName(): string
    +getBreed(): string
    +getColour(): string
    +getMarking(): string
    +getBirthYear: int
}
@enduml